# bank_api

./: .env.example  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: operations.md
infra/terraform/: main.tf
src/bank_api/: __init__.py  exceptions.py
src/bank_api/api/: __init__.py  app.py  auth.py  dependencies.py  schemas.py
src/bank_api/api/routers/: accounts.py  transactions.py
src/bank_api/api/static/: styles.css
src/bank_api/api/templates/: base.html  configuration.html  dashboard.html  depot.html  login.html  order_form.html  orders.html
src/bank_api/api/web/: __init__.py  routes.py
src/bank_api/cli/: app.py
src/bank_api/client/: banking.py  base.py  session.py
src/bank_api/jobs/: __init__.py  scheduler.py
src/bank_api/models/: __init__.py  banking.py  common.py  session.py
src/bank_api/persistence/: __init__.py  database.py  models.py  repositories.py
src/bank_api/services/: __init__.py  accounts.py  configuration.py  orders.py  transactions.py
tests/: conftest.py  test_clients.py  test_models_common.py
tests/live/: test_sandbox_accounts.py
