[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bank_api"
version = "0.1.0"
description = "Lightweight client and models for the comdirect REST API"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0,<3.0",
    "requests>=2.31",
    "SQLAlchemy>=2.0",
    "APScheduler>=3.10",
    "fastapi>=0.110,<1.0",
    "typer>=0.9,<1.0",
    "rich>=13.0,<14.0",
]

dynamic = ["readme"]

[project.scripts]
bank-api = "bank_api.cli.app:run_cli"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra"
filterwarnings = [
    "ignore::DeprecationWarning",
]
