[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bank_api"
version = "0.1.0"
description = "Lightweight client and models for the comdirect REST API"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0,<3.0",
    "requests>=2.31",
    "SQLAlchemy>=2.0",
    "APScheduler>=3.10",
    "fastapi>=0.110,<1.0",
    "itsdangerous>=2.1",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "typer>=0.9,<1.0",
    "rich>=13.0,<14.0",
    "uvicorn[standard]>=0.27,<0.28",
    "psycopg2-binary>=2.9",
]

dynamic = ["readme"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}

[project.scripts]
bank-api = "bank_api.cli.app:run_cli"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra"
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "mocked: tests that exercise the client with mocked HTTP responses",
    "live: tests that make real calls against the comdirect sandbox",
]

[project.optional-dependencies]
dev = [
    "black>=24.4",
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-mock>=3.12",
    "requests-mock>=1.12",
    "ruff>=0.4",
    "types-requests>=2.32",
]

[tool.black]
line-length = 100
target-version = ["py310"]
exclude = """
/(
    comdirect_docu
)/
"""

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["comdirect_docu"]

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["bank_api"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["comdirect_docu"]
plugins = ["pydantic.mypy"]

[tool.mypy-plugins]
pydantic_version = "v2"
